Include the stack in the error

--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.min.js">
-
-        </script> -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.min.js">
 
         </script>
         <script src="../dist/js-error-handler.js"></script>
