remove session storage dependency

--- a/example/index.html
+++ b/example/index.html
@@ -21,7 +21,7 @@
 
                 // Do something when the save request completes
                 onSave: function(response) {
-                    console.log(this.sessionStorageErrors);
+                    console.log(this.errors);
                 }
 
             });
